Changes
=======

2.0 (unreleased)
----------------

- ``grokcore.view`` no longer depends on ``zope.app.testing`` and
  related packages. Instead we now use ``zope.app.wsgi.testlayer`` to
  run functional tests.

- Made package comply to zope.org repository policy.

- Fixed launchpad bug #395061 : removed the default_fallback_to_name
  function. It can be imported from ``grokcore.security`` if needed.

- ``grokcore.view`` no longer depends on ``zope.app.zcmlfiles``. We
  removed all the extra dependencies and fixed one test that used
  ``zope.app.rotterdam`` and ``zope.app.basicskin``.

- Back-ported the changes of the 1.13 branch related to the directory
  resource registration, using the latest ztk packages.

- Factor out generally useful methods and properties for view-ish
  components into components.ViewSupport mixin.

- Works with new Martian (0.12) and grokcore.component 2.0.

- Test fix: support windows paths.

- Warnings are now emitted as log messages with level
  `logging.WARNING` to a logger named ``grokcore.view`` with level
  `logging.ERROR`.

  That means that by default no warnings are emitted anymore (while
  errors will still appear).

  To get the warnings back, reduce the level of logger
  ``grokcore.view`` to `logging.WARNING` or lower. This can be done in
  Python or via a logging conf file, for instance in the .ini files of
  regular grokprojects. See the Python standard lib `logging` module
  for details.

1.12.1 (2009-09-17)
-------------------

- A compatibility fix to support ``grokcore.viewlet``.

1.12 (2009-09-17)
-----------------

- Use 1.0b1 versions.cfg in Grok's release info instead of a local
  copy; a local copy for all grokcore packages is just too hard to
  maintain.

- Revert the splitting CodeView/View. The original reasons for the
  split have been obsoleted by the recent martain developments
  regarding inheritted module level directives. At the same time the