@@ -12,7 +12,18 @@ point to mammoth:
   >>> browser.open('http://localhost/manfred')
   >>> browser.url
   'http://localhost/manfred/another'
-  
+
+  >>> browser.open('http://localhost/manfred/trustedredirect')
+  >>> browser.url
+  'http://www.google.com/'
+
+  >>> browser.open('http://localhost/manfred/redirectwithstatus')
+  Traceback (most recent call last):
+  ...
+  HTTPError: HTTP Error 418: Unknown
+  >>> browser.url
+  'http://localhost/manfred/redirectwithstatus'
+
 """
 import grokcore.view as grok
 
@@ -23,7 +34,14 @@ class Index(grok.View):
     def render(self):
         self.redirect(self.url('another'))
 
+class TrustedRedirect(grok.View):
+    def render(self):
+        self.redirect('http://www.google.com/ncr', trusted=True)
+
+class RedirectWithStatus(grok.View):
+    def render(self):
+        self.redirect(self.url(), status=418)
+
 class Another(grok.View):
     def render(self):
         return "Another view"
-
